--- a/src/components/roomComponents/room/Room.module.css
+++ b/src/components/roomComponents/room/Room.module.css
@@ -4,3 +4,8 @@
     border-radius: 5px;
   }
   
+  .widget2 {
+    background-color: rgba(255, 206, 86, 0.6);
+    padding: 16px;
+    border-radius: 5px;
+  }
